--- a/assets/css/releases/components/donation_card.css
+++ b/assets/css/releases/components/donation_card.css
@@ -7,9 +7,10 @@
     margin-top: 1em;
     margin-bottom: 3em;
     padding: 1em 2em;
-    font-size: 1.6em;
+    font-size: 1.2em;
     font-weight: 600;
     text-align: center;
+
     .color{
         text-wrap-mode: nowrap;
         color: #ff428e;
@@ -18,6 +19,13 @@
 
 @media (min-width: 1200px) {
     #donation-card{
+        font-size: 1.4em;
         flex-direction: row;
+    }
+}
+
+@media (min-width: 1400px) {
+    #donation-card{
+        font-size: 1.6em;
     }
 }
