--- a/assets/css/releases/components/hero.css
+++ b/assets/css/releases/components/hero.css
@@ -68,12 +68,12 @@
     text-align: center;
   }
   h1{
-    font-size: 1.6em;
+    font-size: 2.4em;
     margin-bottom: var(--xs);
     font-weight: 600;
     }
   h2{
-    font-size: 1.4em;
+    font-size: 2.2em;
     margin-bottom: var(--l);
   }
 }
